# fair-orientation

./: .gitignore  LICENSE  README.md  pyproject.toml
src/fair_orientation/: __init__.py  findefxorientobj.py  findfairorientation.py  graphs.py  pdvertexcover.py  sat.py
tests/: test_findefxorientobj.py  test_findfairorientation.py  test_graphs.py  test_pdvertexcover.py  test_sat.py
