[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "fair-orientation"
version = "0.1.0"
description = "Algorithms for computing and verifying fair graph orientations (EF1 and EFX)."
authors = [
  { name = "Kevin Hsu" }
]
readme = "README.md"
requires-python = ">=3.0"

[tool.setuptools.packages.find]
where = ["src"]